--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url = jdbc:mysql://localhost:3306/algalog?useTimezone=true&ser
 spring.datasource.username=root
 spring.datasource.password=c3r3br0
 
+spring.jpa.show-sql=true
+
 # flyway
 spring.flyway.baseline-on-migrate=true
 #spring.flyway.enabled=false
